# plato-cli

./: Cargo.toml  README.md  __main__.py  plato_cli.py  pyproject.toml
.github/workflows/: ci-rust-python.yml
plato_cli/: __init__.py
plato_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
plato_consciousness_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: lib.rs  main.rs
tests/: test_cli.py
