[package]
categories = ["science"]
keywords = ["plato", "ai", "tiles", "rooms"]
repository = "https://github.com/SuperInstance/plato-cli"
license = "MIT"
description = "PLATO CLI component for the Cognitive Capacity Protocol Network"
license = "MIT"
description = "PLATO Cli component for the Cognitive Capacity Protocol Network"
categories = ["science"]
keywords = ["plato", "ai", "tiles", "rooms"]
repository = "https://github.com/SuperInstance/plato-cli"
name = "plato-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "plato"
path = "src/main.rs"
